# clash-demo

./: LICENSE  build.cfg  cabal.project  default.nix  demo.cabal  iceblink.pcf  makefile  shell.nix
nix/: nixpkgs.nix
src/: OtherModule.hs  TopEntity.hs
